# agent-skills

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  TODO.md  mcp.example.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: test.yml
agents/autoresearch/: README.md  pyproject.toml
agents/autoresearch/src/autoresearch/: __init__.py  __main__.py  agent.py  cli.py  hooks.py  mcp_server.py  models.py  runner.py  state.py
agents/autoresearch/tests/: test_cli.py  test_hooks.py  test_mcp_server.py  test_models.py  test_runner.py  test_state.py
agents/digest/: README.md  SPECS.md  digest-watch.example.toml  pyproject.toml
agents/digest/src/digest/: __init__.py  __main__.py  alerts.py  cli.py  credibility.py  dedup.py  diff.py  expansion.py  hooks.py  mcp_server.py  memory.py  models.py  notifier.py  output.py  pipeline.py  ranking.py  recall_bridge.py  source_tracker.py  synthesis.py  views.py  watcher.py
agents/digest/src/digest/adapters/: __init__.py  _helpers.py  arxiv.py  base.py  blockscout.py  clinicaltrials.py  coingecko.py  ethresearch.py  federalregister.py  github.py  hackernews.py  openalex.py  packages.py  polymarket.py  pubmed.py  reddit.py  semanticscholar.py  shodan.py  snapshot.py  youtube.py
agents/digest/tests/: test_adapter_helpers.py  test_alerts.py  test_arxiv.py  test_blockscout.py  test_cli.py  test_clinicaltrials.py  test_coingecko.py  test_courtlistener.py  test_credibility.py  test_dedup.py  test_diff.py  test_ethresearch.py  test_expansion.py  test_federalregister.py  test_github_engagement.py  test_github_filters.py  test_hooks.py  test_mcp_server.py  test_memory.py  test_notifier.py  test_openalex.py  test_packages.py  test_polymarket.py  test_pubmed.py  test_ranking.py  test_recall_bridge.py  test_reddit.py  test_semanticscholar.py  test_shodan.py  test_snapshot.py  test_source_tracker.py  test_views.py  test_watcher.py  test_youtube.py
agents/patchbot/: README.md  pyproject.toml
agents/patchbot/src/patchbot/: __init__.py  __main__.py  cli.py  detector.py  hooks.py  mcp_server.py  models.py  updater.py
agents/patchbot/tests/: test_cli.py  test_detector.py  test_hooks.py  test_mcp_server.py  test_models.py  test_updater.py
agents/prepper/: README.md  pyproject.toml
agents/recall/: README.md  pyproject.toml
agents/regen/: README.md  pyproject.toml
agents/scribe/: README.md  pyproject.toml
agents/sentinel/: README.md  pyproject.toml
agents/shared/: README.md  pyproject.toml
agents/shared/src/shared/: __init__.py  chains.py  coerce.py  config.py  dates.py  hooks.py  http.py  models.py  notify.py  paths.py
agents/shared/tests/: test_chains.py  test_coerce.py  test_dates.py  test_http.py  test_notify.py  test_paths.py
agents/watchdog/: README.md  pyproject.toml
agents/watchdog/src/watchdog/: __init__.py  __main__.py  checks.py  cli.py  mcp_server.py  models.py  scanner.py
agents/watchdog/tests/: test_alerts.py  test_checks.py  test_cli.py  test_mcp_server.py  test_models.py
benchmarks/: skill-bench.py
docs/: aarts-handover.md
scripts/: skill-triggers-test.py  skills-lint.sh
scripts/hooks/: prepper-session-start.sh
skills/adversarial-reviewer/: SKILL.md  personas.md
skills/agent-designer/: SKILL.md  architecture-patterns.md  guardrails.md  tool-design.md
skills/architect/: SKILL.md  adr-workflow.md  dependency-classification.md
skills/autoresearch/: SKILL.md
skills/blockscout/: SKILL.md  tools-reference.md  usage-patterns.md
skills/ci-cd-pipeline-builder/: SKILL.md  pipeline-templates.md  stack-detection.md
skills/claude-api/: SKILL.md
skills/code-review/: SKILL.md  blast-radius.md  breaking-changes.md  checklist.md  quality-checks.md  receiving-review.md  security-scan.md
skills/codebase-onboarding/: SKILL.md  audience-profiles.md  output-template.md
skills/coingecko/: SKILL.md  cheat-sheet.md  mcp-setup.md
skills/database-designer/: SKILL.md  index-optimization.md  migration-safety.md  schema-design.md
skills/dependency-auditor/: SKILL.md  license-compliance.md  vulnerability-scanning.md
skills/design-an-interface/: SKILL.md  constraints.md
skills/design-ux/: SKILL.md
skills/digest/: SKILL.md  mcp-setup.md
skills/droo-stack/: SKILL.md
skills/env-secrets-manager/: SKILL.md
skills/ethskills/: SKILL.md  rpc-explorers.md  stack-selection.md  standards.md  tools.md
skills/ffmpeg-asm/: SKILL.md
skills/focused-fix/: SKILL.md  five-phases.md
skills/git-guardrails/: SKILL.md  (+1 more)
(+271 files in other folders)
