[project]
name = "digest"
version = "0.1.0"
description = "Multi-platform activity digest agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "droo" }]
dependencies = [
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "anthropic>=0.40.0",
    "rich>=13.7.0",
    "fastmcp>=2.0.0",
    "agent-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
digest = "digest.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/digest"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/digest/adapters/snapshot.py" = ["E501"]  # GraphQL query string
