[project]
name = "watchdog"
version = "0.1.0"
description = "Continuous repo health monitor -- stale PRs, failing CI, dependency vulns, TODO refs"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "droo" }]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "rich>=13.7.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
watchdog = "watchdog.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watchdog"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
